corrected the overflow in background

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -4,6 +4,7 @@
 .background{
     background-color: rgb(90, 164, 191);
     min-height: 100vh;
+    overflow: auto;
 }
 
 
@@ -54,14 +55,19 @@
 }
 
 /*-----------form-------------------*/
-.form-container{
+.form-container {
     background-color: rgb(190, 221, 232);
-    padding:10px;
-    margin:10% 30% 10% 30%;
+    padding: 30px;
+
+    width: 60%; 
+    max-width: 800px; 
+    margin: 40px auto;
+    
     display: flex;
     align-items: center;
     flex-direction: column;
-    border-radius: 15px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
 }
 
 .form-content{
